--- a/src/MauiTemplatesCLI/MauiAppX/Properties/launchSettings.json
+++ b/src/MauiTemplatesCLI/MauiAppX/Properties/launchSettings.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
     "Windows Machine": {
       //#if (Unpackaged)
