--- a/src/MauiTemplatesCLI/VijayAnand.MauiTemplates.csproj
+++ b/src/MauiTemplatesCLI/VijayAnand.MauiTemplates.csproj
@@ -7,7 +7,7 @@
         <PackageType>Template</PackageType>
         <PackageId>VijayAnand.MauiTemplates</PackageId>
         <PackageVersion>3.0.0</PackageVersion>
-        <Title>.NET MAUI Templates</Title>
+        <Title>.NET MAUI Project and Item Templates</Title>
         <Authors>Vijay Anand E G</Authors>
         <Copyright>Copyright &#169; 2021-2023 Vijay Anand E G</Copyright>
         <Description>Project and Item templates for developing .NET MAUI App that runs on iOS, Android, macOS, Tizen, and Windows</Description>
