--- a/src/MauiTemplatesCLI/MauiClassLib/MauiClassLib.1.csproj
+++ b/src/MauiTemplatesCLI/MauiClassLib/MauiClassLib.1.csproj
@@ -139,10 +139,20 @@
         <None Remove="MauiClassLib.1.code-workspace" />
     </ItemGroup>
     <!--#endif-->
-    <!--#if (AddToolkitPackage || AddMarkupPackage || AddMvvmToolkitPackage)-->
+    <!--#if (Net8 || AddToolkitPackage || AddMarkupPackage || AddMvvmToolkitPackage)-->
 
     <ItemGroup>
     <!--#endif-->
+        <!--#if (Net8)-->
+        <!--#if (UseMauiCore)-->
+        <PackageReference Include="Microsoft.Maui.Core" Version="8.0.0-preview.4.*" />
+        <!--#elif (UseMauiEssentials)-->
+        <PackageReference Include="Microsoft.Maui.Essentials" Version="8.0.0-preview.4.*" />
+        <!--#else-->
+        <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.0-preview.4.*" />
+        <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.0-preview.4.*" />
+        <!--#endif-->
+        <!--#endif-->
         <!--#if (Net7OrLater)-->
         <!--#if (AddToolkitPackage)-->
         <PackageReference Include="CommunityToolkit.Maui" Version="5.1.0"/>
@@ -161,7 +171,7 @@
         <!--#if (AddMvvmToolkitPackage)-->
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0"/>
         <!--#endif-->
-    <!--#if (AddToolkitPackage || AddMarkupPackage || AddMvvmToolkitPackage)-->
+    <!--#if (Net8 || AddToolkitPackage || AddMarkupPackage || AddMvvmToolkitPackage)-->
     </ItemGroup>
     <!--#endif-->
     <!--#if (ConditionalCompilation)-->
