--- a/src/MauiTemplatesCLI/MauiAppX/MauiApp.1.csproj
+++ b/src/MauiTemplatesCLI/MauiAppX/MauiApp.1.csproj
@@ -180,14 +180,14 @@
         <!--#endif-->
         <!--#if (AddFoldablePackage)-->
         <!--#if (Net8)-->
-        <PackageReference Include="Microsoft.Maui.Controls.Foldable" Version="8.0.0-preview.4.*" />
+        <PackageReference Include="Microsoft.Maui.Controls.Foldable" Version="8.0.0-preview.5.*" />
         <!--#else-->
         <PackageReference Include="Microsoft.Maui.Controls.Foldable" Version="7.0.*" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddMapsPackage)-->
         <!--#if (Net8)-->
-        <PackageReference Include="Microsoft.Maui.Controls.Maps" Version="8.0.0-preview.4.*" />
+        <PackageReference Include="Microsoft.Maui.Controls.Maps" Version="8.0.0-preview.5.*" />
         <!--#else-->
         <PackageReference Include="Microsoft.Maui.Controls.Maps" Version="7.0.*" />
         <!--#endif-->
@@ -195,26 +195,26 @@
         <!--#if (Net7OrLater)-->
         <!--#if (Net8)-->
         <!--#if (Hybrid || Razor)-->
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="8.0.0-preview.4.*" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="8.0.0-preview.5.*" />
         <!--#endif-->
-        <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0-preview.4.*" />
-        <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.0-preview.4.*" />
-        <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.0-preview.4.*" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0-preview.5.*" />
+        <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.0-preview.5.*" />
+        <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.0-preview.5.*" />
         <!--#else-->
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
         <!--#endif-->
         <!--#if (AddToolkitPackage)-->
-        <PackageReference Include="CommunityToolkit.Maui" Version="5.1.0"/>
+        <PackageReference Include="CommunityToolkit.Maui" Version="5.2.*"/>
         <!--#endif-->
         <!--#if (AddMarkupPackage)-->
-        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="3.1.0"/>
+        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="3.2.*"/>
         <!--#endif-->
         <!--#if (AddMediaPackage)-->
-        <PackageReference Include="CommunityToolkit.Maui.MediaElement" Version="1.0.*"/>
+        <PackageReference Include="CommunityToolkit.Maui.MediaElement" Version="2.0.*"/>
         <!--#endif-->
         <!--#else-->
         <!--#if (AddToolkitPackage)-->
-        <PackageReference Include="CommunityToolkit.Maui" Version="2.0.0"/>
+        <PackageReference Include="CommunityToolkit.Maui" Version="2.0.*"/>
         <!--#endif-->
         <!--#if (AddMarkupPackage)-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="1.2.*"/>
