--- a/src/MauiTemplatesCLI/SharedClassLib/SharedClassLib.1.csproj
+++ b/src/MauiTemplatesCLI/SharedClassLib/SharedClassLib.1.csproj
@@ -49,19 +49,19 @@
     <ItemGroup Condition="'$(TargetFramework)' == 'MAUI_TFM'">
     <!--#endif-->
         <!--#if (Net8)-->
-        <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.0-preview.4.*" />
-        <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.0-preview.4.*" />
+        <PackageReference Include="Microsoft.Maui.Controls" Version="8.0.0-preview.5.*" />
+        <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="8.0.0-preview.5.*" />
         <!--#endif-->
         <!--#if (AddMauiToolkit)-->
         <!--#if (Net7OrLater)-->
-        <PackageReference Include="CommunityToolkit.Maui" Version="5.1.0"/>
+        <PackageReference Include="CommunityToolkit.Maui" Version="5.2.*"/>
         <!--#else-->
-        <PackageReference Include="CommunityToolkit.Maui" Version="2.0.0"/>
+        <PackageReference Include="CommunityToolkit.Maui" Version="2.0.*"/>
         <!--#endif-->
         <!--#endif-->
         <!--#if (AddMauiMarkup)-->
         <!--#if (Net7OrLater)-->
-        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="3.1.0" />
+        <PackageReference Include="CommunityToolkit.Maui.Markup" Version="3.2.*" />
         <!--#else-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="1.2.*" />
         <!--#endif-->
