--- a/src/MauiTemplatesCLI/MauiAppX/Platforms/Android/AndroidManifest.xml
+++ b/src/MauiTemplatesCLI/MauiAppX/Platforms/Android/AndroidManifest.xml
@@ -1,14 +1,20 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    <!--#if (Net7OrLater)-->
+    <!--#if (Net8)-->
     <!--#if (Hybrid)-->
-    <uses-sdk android:minSdkVersion="23" android:targetSdkVersion="33" />
+    <uses-sdk android:minSdkVersion="24" android:targetSdkVersion="34" />
+    <!--#else-->
+    <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="34" />
+    <!--#endif-->
+    <!--#elif (Net7)-->
+    <!--#if (Hybrid)-->
+    <uses-sdk android:minSdkVersion="24" android:targetSdkVersion="33" />
     <!--#else-->
     <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="33" />
     <!--#endif-->
     <!--#else-->
     <!--#if (Hybrid)-->
-    <uses-sdk android:minSdkVersion="23" android:targetSdkVersion="31" />
+    <uses-sdk android:minSdkVersion="24" android:targetSdkVersion="31" />
     <!--#else-->
     <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="31" />
     <!--#endif-->
